EIP-712 Message Signing Endpoint: finalization (#1634)
* test_molecule_provided_test_data(): add signature generation / address recovery test

* crypto-eip712-utils: Secp256k1Signer / Secp256k1VerifyingKey

* Secp256k1Signer: zeroize

* Secp256k1Signer::from_bytes(): zeroize

* Secp256k1Signer: debug impl

* crypto-eip712-utils: serde under feature gate

* Secp256k1Signature

* Secp256k1Signature: Serialize

* crypto-eip712-utils: more tests

* crypto-eip712-utils: add "schemars" feature

* Secp256k1Signer: Serialize

* crypto-eip712-utils: utoipa feature

* kamu-adapter-http: SignEip712Proof: return structs not String

* kamu-adapter-http: SignEip712Response: add "verification_method" field

* sign_eip712_handler(): declarative response

* DidSecretEncryptionConfig: ZeroizeOnDrop

* IdentityConfig: use Secp256k1Signer

* sign_eip712_handler(): remove a TODO re zeroize (already did)

* sign_eip712_handler(): update imports

* kamu-adapter-http: use SignEip712UseCase

* kamu-signing: introduce

* Eip712TypedData: Deserialize

* MoleculeProject: remove todo

* kamu-signing-services: initial

* kamu-signing-services: SignEip712UseCaseImpl

* DidOdf: serde

* SignEip712UseCaseImpl: polish

* SignEip712UseCaseImpl: access checks

* clippy: fixes

* CreateAccountUseCaseImpl::execute(): store private key

* test_sign_eip712_use_case_impl

* Changes after test runs

* test_verify(): update identity config

* clippy fixes
